--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -114,6 +114,11 @@
 \chapter*{Background}\label{background}
 \addcontentsline{toc}{chapter}{Background}
 
+Warning : The links do not work yet.
+
+I am only modifying the content. Original content is from
+gama-platform.org
+
 \chapter{Java version}\label{java-version}
 
 Due to changes in the libraries used by GAMA 1.7 and 1.8, this version
