content owner notice

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -111,13 +111,14 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\chapter*{Background}\label{background}
-\addcontentsline{toc}{chapter}{Background}
+\chapter*{Notice}\label{notice}
+\addcontentsline{toc}{chapter}{Notice}
+
+The content of this manual is from gama-platform.org website. I have
+only modified and edited very small portions of the content to give it a
+book format.
 
 Warning : The links do not work yet.
-
-I am only modifying the content. Original content is from
-gama-platform.org
 
 \chapter{Java version}\label{java-version}
 
