--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={GAMA Manual},
+            pdftitle={GAMA 1.8 User Manual},
             pdfauthor={Srirama Bhamidipati},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -77,7 +77,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{GAMA Manual}
+  \title{GAMA 1.8 User Manual}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Srirama Bhamidipati}
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-07-15}
+    \date{Updated: 2018-07-15}
 
 \usepackage{makeidx}
 \makeindex
@@ -114,17 +114,28 @@
 \chapter*{Notice}\label{notice}
 \addcontentsline{toc}{chapter}{Notice}
 
-The content of this manual is from gama-platform.org website. I have
-only modified and edited very small portions of the content to give it a
-book format.
+\begin{itemize}
+\item
+  The content of this manual is from gama-platform.org website. I have
+  only modified and edited very small portions of the content to give it
+  a book format.
+\item
+  This is a modified content and is not a 100\% reproduction. If you do
+  not find what you are looking for, go to the main website.
+\item
+  I thank the Team of GAMA-Platform for giving me the permission to
+  reproduce their content.
+\end{itemize}
 
-This is a modified content and is not a 100\% reproduction. If you do
-not find what you are looking for, go to the main website.
+Cheers !\\[2\baselineskip]\textbf{Srirama Bhamidipati}\\
+\emph{Delft, Netherlands}\\
+\emph{2018}
 
-Cheers !\\
-\textbf{Srirama Bhamidipati}\\
-\textbf{Delft, Netherlands}\\
-\textbf{2018}
+\begin{figure}
+\centering
+\includegraphics{gamacover.png}
+\caption{}
+\end{figure}
 
 \chapter{Java version}\label{java-version}
 
