modified errors in categories

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-15 09:43:45 (Amsterdam)}
+    \date{Updated: 2018-07-15 09:55:05 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -520,7 +520,7 @@ come)}\label{allow-tcp-udp-and-mqqt-communications-between-agents-in-different-s
 \subsection{Arithmetic operators}\label{arithmetic-operators}
 
 \href{operators-a-to-a.html\#-}{-}, \href{operators-a-to-a.html\#/}{/},
-{[}\textsuperscript{{]}(operators-a-to-a.html\#}),
+\href{operators-a-to-a.html\#\%5E}{\^{}},
 \href{operators-a-to-a.html\#*}{*}, \href{operators-a-to-a.html\#+}{+},
 \href{operators-a-to-a.html\#abs}{abs},
 \href{operators-a-to-a.html\#acos}{acos},
