--- a/learngaml2.Rmd
+++ b/learngaml2.Rmd
@@ -1,8 +1,11 @@
 # Learn GAML (Beginner -II)
 
-If you are a beginner, the next 7 chapters will introduce you to the GAML language. To learn the language, follow this recommended sequence:
+If you are a beginner, the next 7 chapters will introduce you to  functions and statements in GAML language. Before you read these chapters it is important you know what are data types. To learn the language, follow this recommended sequence:
 
 
 
-* Operators : This includes 6 chapters introducing you to all the operators (A to Z) in GAMA. Go first to the chapter **opeators by categories** to get a feel of the scope of operators available.
-* Statements
+* Operators (9-15) : This includes 6 chapters introducing you to all the operators (A to Z) in GAMA. Go first to the chapter **opeators by categories** to get a feel of the scope of operators available.
+
+Operators are typically like functions or methods in other languages. They accept one or more arguments of the basic or complex data types and return a result in one of the data types.
+
+* Statements (16) : Statement is a one-line sequence of keywords (commands) guided with controlling arguments (facets) that operate on one of the data types or a combination of operators and data types.
