added more separators  literals, statements, types

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-16 10:53:28 (Amsterdam)}
+    \date{Updated: 2018-07-16 20:50:32 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -499,7 +499,7 @@ come)}\label{allow-tcp-udp-and-mqqt-communications-between-agents-in-different-s
 
 \chapter{Learn GAML (Beginner -I)}\label{learn-gaml-beginner--i}
 
-If you are a beginner, the next 5 chapters will introduce you to the
+If you are a beginner, the next 4 chapters will introduce you to the
 GAML language. To learn the language, follow this recommended sequence:
 
 \begin{itemize}
@@ -512,8 +512,6 @@ GAML language. To learn the language, follow this recommended sequence:
   File Types
 \item
   Pseudo-variables
-\item
-  Statements
 \end{itemize}
 
 \hypertarget{literals}{\chapter{Literals}\label{literals}}
@@ -2336,17 +2334,29 @@ container. It can then take any type depending on the context.
 
 \chapter{Learn GAML (Beginner -II)}\label{learn-gaml-beginner--ii}
 
-If you are a beginner, the next 7 chapters will introduce you to the
-GAML language. To learn the language, follow this recommended sequence:
+If you are a beginner, the next 7 chapters will introduce you to
+functions and statements in GAML language. Before you read these
+chapters it is important you know what are data types. To learn the
+language, follow this recommended sequence:
 
 \begin{itemize}
 \tightlist
 \item
-  Operators : This includes 6 chapters introducing you to all the
+  Operators (9-15) : This includes 6 chapters introducing you to all the
   operators (A to Z) in GAMA. Go first to the chapter \textbf{opeators
   by categories} to get a feel of the scope of operators available.
+\end{itemize}
+
+Operators are typically like functions or methods in other languages.
+They accept one or more arguments of the basic or complex data types and
+return a result in one of the data types.
+
+\begin{itemize}
+\tightlist
 \item
-  Statements
+  Statements (16) : Statement is a one-line sequence of keywords
+  (commands) guided with controlling arguments (facets) that operate on
+  one of the data types or a combination of operators and data types.
 \end{itemize}
 
 \chapter{Operators by categories}\label{operators-by-categories}
