--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-16 20:50:32 (Amsterdam)}
+    \date{Updated: 2018-07-17 08:06:25 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -2340,19 +2340,13 @@ chapters it is important you know what are data types. To learn the
 language, follow this recommended sequence:
 
 \begin{itemize}
-\tightlist
 \item
   Operators (9-15) : This includes 6 chapters introducing you to all the
   operators (A to Z) in GAMA. Go first to the chapter \textbf{opeators
   by categories} to get a feel of the scope of operators available.
-\end{itemize}
-
-Operators are typically like functions or methods in other languages.
-They accept one or more arguments of the basic or complex data types and
-return a result in one of the data types.
-
-\begin{itemize}
-\tightlist
+  Operators are typically like functions or methods in other languages.
+  They accept one or more arguments of the basic or complex data types
+  and return a result in one of the data types.
 \item
   Statements (16) : Statement is a one-line sequence of keywords
   (commands) guided with controlling arguments (facets) that operate on
