error reporting page

--- a/index.Rmd
+++ b/index.Rmd
@@ -22,6 +22,7 @@ description: "Document describing the GAMA operators and their functions."
 ---
 
 ```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html'), }
+options(width = 90)
 knitr::include_graphics('cover.png', dpi = NA)
 options(width = 90)
 ```
