changed title of the book

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={GAMA 1.8 User Manual},
+            pdftitle={GAMA 1.8 - User Manual for Beginners},
             pdfauthor={Srirama Bhamidipati},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -77,7 +77,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{GAMA 1.8 User Manual}
+  \title{GAMA 1.8 - User Manual for Beginners}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Srirama Bhamidipati}
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 06:07:01 (Amsterdam)}
+    \date{Updated: 2018-07-18 06:28:47 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
