changed error handling page of  book

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 06:28:47 (Amsterdam)}
+    \date{Updated: 2018-07-18 06:42:39 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -140,7 +140,7 @@ Cheers !\\[2\baselineskip]\textbf{Srirama Bhamidipati}\\
 \chapter*{Report Errors}\label{report-errors}
 \addcontentsline{toc}{chapter}{Report Errors}
 
-If you have any problems/typos/errors related to this book, you can
+If you find any problems/typos/errors related to this book, you can
 report issues on this
 \href{https://github.com/sriramab/gama_books/issues}{page}. On this page
 you can click the big green button ``New Issue'' and fill in the
@@ -153,7 +153,7 @@ details. Typically, you should fill
 \item
   a link to the book
 \item
-  page number that has the error
+  page or section number that has the error
 \end{itemize}
 
 \chapter{Java version}\label{java-version}
