changed error handling page

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 06:42:39 (Amsterdam)}
+    \date{Updated: 2018-07-18 06:51:13 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -137,8 +137,9 @@ Cheers !\\[2\baselineskip]\textbf{Srirama Bhamidipati}\\
 \caption{}
 \end{figure}
 
-\chapter*{Report Errors}\label{report-errors}
-\addcontentsline{toc}{chapter}{Report Errors}
+\chapter*{Report Errors/ Give
+Feedback}\label{report-errors-give-feedback}
+\addcontentsline{toc}{chapter}{Report Errors/ Give Feedback}
 
 If you find any problems/typos/errors related to this book, you can
 report issues on this
@@ -155,6 +156,10 @@ details. Typically, you should fill
 \item
   page or section number that has the error
 \end{itemize}
+
+You can also leave a feedback on the same
+\href{https://github.com/sriramab/gama_books/issues}{page}, just select
+the label for ``feedback''.
 
 \chapter{Java version}\label{java-version}
 
