--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 06:51:13 (Amsterdam)}
+    \date{Updated: 2018-07-18 07:05:28 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -115,6 +115,10 @@
 \addcontentsline{toc}{chapter}{Notice}
 
 \begin{itemize}
+\item
+  The main purpose of this book is to provide a simplified resource that
+  has the basic required content to get the reader started with GAMA
+  Language (GAML).
 \item
   The content of this manual is from gama-platform.org website. I have
   only modified and edited very small portions of the content to give it
