--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 07:05:28 (Amsterdam)}
+    \date{Updated: 2018-07-18 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -116,13 +116,13 @@
 
 \begin{itemize}
 \item
-  The main purpose of this book is to provide a simplified resource that
-  has the basic required content to get the reader started with GAMA
+  The main purpose of this book is to provide a simple introduction with
+  bare minimum content that helps the reader to get started with GAMA
   Language (GAML).
 \item
   The content of this manual is from gama-platform.org website. I have
-  only modified and edited very small portions of the content to give it
-  a book format.
+  only modified and edited portions of the content to give it a book
+  format.
 \item
   This is a modified content and is not a 100\% reproduction. If you do
   not find what you are looking for, go to the main website.
