--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "GAMA 1.8 - User Manual for Beginners"
 author: "Srirama Bhamidipati"
-date: "Updated: `r Sys.time()` (Amsterdam)"
+date: "Updated: `r Sys.Date()` (Amsterdam)"
 header-includes:
   - \usepackage{tikz}
   - \usetikzlibrary{shapes.geometric, arrows}}
@@ -31,9 +31,9 @@ options(width = 90)
 
 # Notice {-}
 
-* The main purpose of this book is to provide a simplified resource that has the basic required content to get the reader started with GAMA Language (GAML).
+* The main purpose of this book is to provide a simple introduction with bare minimum content that helps the reader to get started with GAMA Language (GAML).
 
- * The content of this manual is from gama-platform.org website. I have only modified and edited very small portions of the content to give it a book format.
+ * The content of this manual is from gama-platform.org website. I have only modified and edited portions of the content to give it a book format.
 
 * This is a modified content and is not a 100% reproduction. If you do not find what you are looking for, go to the main website.
 
