added downloads page

--- a/docs/GAMA-Manual.tex
+++ b/docs/GAMA-Manual.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={GAMA 1.8 - User Manual for Beginners},
+            pdftitle={GAMA 1.8 - GAML User Manual for Beginners},
             pdfauthor={Srirama Bhamidipati},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -77,7 +77,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{GAMA 1.8 - User Manual for Beginners}
+  \title{GAMA 1.8 - GAML User Manual for Beginners}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Srirama Bhamidipati}
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2018-07-18 (Amsterdam)}
+    \date{Updated: 2018-07-27 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -164,6 +164,15 @@ details. Typically, you should fill
 You can also leave a feedback on the same
 \href{https://github.com/sriramab/gama_books/issues}{page}, just select
 the label for ``feedback''.
+
+\chapter*{Downloads}\label{downloads}
+\addcontentsline{toc}{chapter}{Downloads}
+
+You can download the stable release from:
+\url{https://github.com/gama-platform/gama/releases/tag/oxygen}
+
+Or you can download the nightly build from:
+\url{https://github.com/gama-platform/gama/releases/tag/latest}
 
 \chapter{Java version}\label{java-version}
 
