--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "GAMA 1.8 - GAML User Manual for Beginners"
+title: "GAMA 1.8 - GAML Quick Reference for Beginners"
 author: "Srirama Bhamidipati"
 date: "Updated: `r Sys.Date()` (Amsterdam)"
 header-includes:
@@ -20,6 +20,10 @@ site: bookdown::bookdown_site
 documentclass: book
 description: "Document describing the GAMA operators and their functions."
 ---
+
+```{r echo=FALSE}
+bookdown::kindlegen()
+```
 
 ```{r fig.align='center', echo=FALSE, include=identical(knitr:::pandoc_to(), 'html'), }
 options(width = 90)
