--- a/GAMA-Manual.tex
+++ b/GAMA-Manual.tex
@@ -153,6 +153,8 @@
 \item
   This is a modified content and is not a 100\% reproduction. If you do not find what you are looking for, go to the main website.
 \item
+  See downloads section for a different way to obtain full GAMA documentation.
+\item
   I thank the Team of GAMA-Platform for giving me the permission to reproduce their content.
 \end{itemize}
 
@@ -160,7 +162,7 @@ Cheers !\\
 ~\\
 \textbf{Srirama Bhamidipati}\\
 \emph{Delft, Netherlands}\\
-\emph{2018}
+\emph{2019}
 
 \includegraphics{gamacover.png}
 
