added docset info

--- a/GAMA-Manual.tex
+++ b/GAMA-Manual.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{Updated: 2019-01-02 (Amsterdam)}
+    \date{Updated: 2019-01-02 10:35:40 (Amsterdam)}
 
 \usepackage{makeidx}
 \makeindex
@@ -207,9 +207,9 @@ You can also leave a feedback on the same \href{https://github.com/sriramab/gama
   \begin{itemize}
   \tightlist
   \item
-    Download offline docset for offline references to use with Kapeli Dash, Velocity and Zeal \textbf{docset viewers}
+    You can use free professional docset viewers like Kapeli Dash, Velocity and Zeal \textbf{docset viewers} to view GAMA documentation
   \item
-    you can download this zip file, unzip, and add it as a local docset from Options/ Preferences / Settings of these viewers.
+    To do so, download this zip file, unzip, and add it as a local docset from Options/ Preferences / Settings of these viewers.
   \item
     \href{https://drive.google.com/file/d/13nsG_tpZr6yN-fgk1gk5fFsn0IYJC-NB/view?usp=sharing}{Download Docset}
   \end{itemize}
